<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_nick_fury"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:contentDescription="@string/nick_fury_image"
        android:src="@drawable/img_nick_fury"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="20dp"
        android:text="@string/continuar"
        android:textAppearance="?textAppearanceButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tw_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tv_border"
        android:padding="12dp"
        android:text="@string/finally_here"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@id/tw_2"
        app:layout_constraintEnd_toStartOf="@id/img_nick_fury"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tw_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tv_border"
        android:padding="12dp"
        android:text="@string/we_need_you"
        android:layout_marginEnd="20dp"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@id/tw_3"
        app:layout_constraintEnd_toStartOf="@id/img_nick_fury"
        app:layout_constraintTop_toBottomOf="@id/tw_1"/>

    <TextView
        android:id="@+id/tw_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tv_border"
        android:padding="12dp"
        android:text="@string/we_trust_you"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@id/btn_continue"
        app:layout_constraintEnd_toStartOf="@id/img_nick_fury"
        app:layout_constraintTop_toBottomOf="@id/tw_2"/>


</androidx.constraintlayout.widget.ConstraintLayout>